[gd_scene load_steps=2 format=3 uid="uid://b2uov4l2ae2wp"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_1svrh"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_1svrh")

[node name="CurrentLevel" type="Label" parent="."]
offset_left = 13.0
offset_top = -1.0
offset_right = 101.0
offset_bottom = 38.0
text = "level 1
"
metadata/_edit_use_anchors_ = true

[node name="CoinsLabel" type="Label" parent="."]
offset_left = 100.0
offset_top = -1.0
offset_right = 161.0
offset_bottom = 22.0
text = "Coins: 0
"
metadata/_edit_use_anchors_ = true

[node name="FPS" type="Label" parent="."]
offset_left = 16.0
offset_top = 29.0
offset_right = 56.0
offset_bottom = 52.0
text = "FPS:"

[node name="BestTime" type="Label" parent="."]
offset_left = 296.0
offset_top = -3.0
offset_right = 336.0
offset_bottom = 20.0

[node name="Time" type="Label" parent="."]
offset_left = 13.0
offset_top = 57.0
offset_right = 56.0
offset_bottom = 80.0
text = "Time:
"
